refactoring cost sections